--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
-  <style>
+  <!-- <style>
     body {
       margin: 0;
       display: flex;
@@ -18,9 +18,10 @@
       height: 90%;
       border: none;
     }
-  </style>
+  </style> -->
 </head>
 <body>
-  <iframe src="resume.pdf"></iframe>
+  <!-- <iframe src="resume.pdf"></iframe> -->
+  <embed src="resume.pdf" type="application/pdf">
 </body>
 </html>
