--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style> -->
 </head>
 <body>
-  <!-- <iframe src="resume.pdf"></iframe> -->
-  <embed src="resume.pdf" type="application/pdf">
+  <iframe src="resume.pdf"></iframe>
+  <!-- <embed src="resume.pdf" type="application/pdf"> -->
 </body>
 </html>
