--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
-  <!-- <style>
+  <style>
     body {
       margin: 0;
       display: flex;
@@ -14,11 +14,11 @@
       background-color: #f9f9f9;
     }
     iframe {
-      width: 80%;
-      height: 90%;
+      width: 100%;
+      height: 100%;
       border: none;
     }
-  </style> -->
+  </style>
 </head>
 <body>
   <iframe src="resume.pdf"></iframe>
