--- a/index.html
+++ b/index.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume</title>
-  <link rel="icon" type="image/x-icon" href="/logo.png">
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f9f9f9;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Documents</title>
+    <style>
+        body {
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          margin: 0;
+          background-color: #f4f4f9;
+        }
+        .container {
+          text-align: center;
+          background: white;
+          padding: 2rem;
+          border-radius: 12px;
+          box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        h1 { 
+          color: #333; 
+        }
+        .links {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          margin-top: 20px;
+        }
+        a {
+          text-decoration: none;
+          color: #007bff;
+          font-weight: 600;
+          padding: 10px 20px;
+          border: 2px solid #007bff;
+          border-radius: 6px;
+          transition: all 0.3s ease;
+        }
+        a:hover {
+          background-color: #007bff;
+          color: white;
+        }
+    </style>
 </head>
 <body>
-  <iframe src="resume.pdf"></iframe>
+  <div class="container">
+    <h1>Professional Documents</h1>
+    <div class="links">
+      <a href="./resume">View Resume</a>
+      <a href="./transcript">View Transcript</a>
+      <a href="./work-term-record">View Work Term Record</a>
+    </div>
+  </div>
 </body>
 </html>
