Update document links to ./docs paths
Modify index.html links so that Resume, Transcript, and Work Term Record point to ./docs/resume, ./docs/transcript, and ./docs/work-term-record respectively. This aligns links with the new docs directory structure and prevents broken routes.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <div class="container">
     <h1>Professional Documents</h1>
     <div class="links">
-      <a href="./resume">View Resume</a>
-      <a href="./transcript">View Transcript</a>
-      <a href="./work-term-record">View Work Term Record</a>
+      <a href="./docs/resume">View Resume</a>
+      <a href="./docs/transcript">View Transcript</a>
+      <a href="./docs/work-term-record">View Work Term Record</a>
     </div>
   </div>
 </body>
